Overflow problem solved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,12 @@ body {
   background: #fff;
   color: #2f3138;
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+
 }
 
 a {
